--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Envelope + Letter (Open/Close on Click)</title>
+    <title>Cartinha</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -13,10 +13,13 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Person.</strong>
+                        <strong>Uma carta para você.</strong>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Numquam labore omnis minus maiores laboriosam, facere in beatae esse. 
+                            Por meio desta carta, o convido para um date no cinema, peço que entre no site ingresso.com
+                            e veja a programação e o filme que deseja assistir, preferencialmente se for aos finais de semana,
+                            fico a espera de sua resposta.
+
+                            att. Romão.
                         </p>
                     </div>
                 </div>
