--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
                     <div class="text">
                         <strong>Uma carta para você.</strong>
                         <p>
-                            Por meio desta carta, o convido para um date no cinema, peço que entre no site ingresso.com
-                            e veja a programação e o filme que deseja assistir, preferencialmente se for aos finais de semana,
-                            fico a espera de sua resposta.
+                            Por meio desta carta, eu venho socilitar seu peito para dormir nele e contudo,
+                            seu pau para sentar e ainda lhe mamar, desde já agradeço sua compreesnção
+                            
+                            obs.: também quero lhe namorar então isso tudo com carinho.
 
                             att. Romão.
                         </p>
